# computervision

./: .gitignore  CMakeLists.txt  DisplayImage.cpp  README.md
Final Project/: CMakeLists.txt  RRansac.cpp
Lab0_Binarization/: lab 0.c
Lab1_HoughTransform/: CVLab1.c
Lab2_MinCut/: CMakeLists.txt  Lab2.cpp
Lab2_MinCut/Matlab/: Untitled.m  clr.m  clrToInt64.m  cncEdges.m  costMap.m  fromInt64.m  graphCut.m  kernel.m  mapTest.m  modClr.m  newCostMap.m  showHsv.m  sortCount.m  subdivide.m  test2.m
Lab3_PatternRecognition/: CMakeLists.txt  Pattern.cpp  featureData.m  plotFeatures.m  plotFeatures2.m
Lab4_TouringIntoThePicture/: CMakeLists.txt  Car_Setup.txt  GraphCut.cpp  TIPSetup.cpp  TIP_3D.m  TMCB_Setup.txt  world.txt
Lab4_TouringIntoThePicture/Car/: TIP_3D.m  world.txt
Lab4_TouringIntoThePicture/Matlab/: TIP_3D.m  TIP_GUI.m  TIP_demo.m  TIP_get5rects.m  addSurface.m  pressKeyCb.m  readFile.m
Lab4_TouringIntoThePicture/TMCB/: TIP_3D.m  world.txt
